2004-11-11  Paolo Bonzini  <bonzini@gnu

	* tst-rxspecer.c: Do not mix instructions and
	declarations.
	* basicdefs.h: Include locale.h before #defining
	gettext, to avoid breakage under Solaris.
	* sed/sed.c: do not include locale.h.

2004-10-08  Paolo Bonzini  <bonzini@gnu.org>

	* lib/utils.c (utils_id_s): Renamed to open_files.
	(struct id): Renamed to struct open_file.

2004-10-08  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/Makefile.tests (bug-regex*, run-tests,
	run-ptests): Use $(SED).
	(version): Likewise; prepend $(SED) invocation with $(SEDENV).

2004-08-16  Paolo Bonzini  <bonzini@gnu.org>

	*** Version 4.1.2 released.

2004-08-06  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (bad_command): Fix off-by-one error.
	(snarf_char_class): Fix problem with [.....[] (i.e.
	last char in class is a bracket.

2004-06-30  Paolo Bonzini  <bonzini@gnu.org>

	*** Version 4.1.1 released.

2004-06-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (mark_subst_opts): Return int.
	* sed/execute.c (open_next_file): Fix uninitialized
	variable.

2004-06-10  Paolo Bonzini  <bonzini@gnu.org>

	*** Version 4.1 released.

2004-03-25  Paolo Bonzini  <bonzini@gnu.org>

	* lib/obstack.h: Get current version.

2004-03-13  Paolo Bonzini  <bonzini@gnu.org>

	Exit as soon as possible on an I/O error, and with
	a better error message.

	* lib/utils.c (ck_mkstemp, ck_rename, ck_getline): New
	functions.  Save temporary files into utils_id_s.
	(struct id): Add a field named temp.
	(ck_fopen): Init the new temp field of struct id.
	(panic): Unlink temporary files before exiting.
	* sed/execute.c (read_file_line): Use ck_getline.
	(closedown): Use ck_rename.
	(open_next_file): Use ck_mkstemp.

2004-01-20  Paolo Bonzini  <bonzini@gnu.org>

	* sed/sed.h (enum addr_state): New definition.
	(enum addr_type): Remove ADDR_IS_NUM2.
	(struct sed_cmd): Replace a1_matched with range_state.
	* sed/compile.c (next_cmd_entry): Use range_state.